# CameraTracker

./: .gitmodules  CMakeLists.txt  CameraTracker.ino  README.md  config.conf
src/: CMakeCache.txt  CameraTracker  Makefile  aircraft.cpp  aircraft.h  cmake_install.cmake  config.cpp  config.h  main.cpp  matrix33.cpp  matrix33.h  vector31.cpp  vector31.h
